AssingmentSmartHR/force-app/main/default/objects/Offer__c/fields/HR_Advisor__c.field-meta.xml
<CustomField>
    <fullName>HR_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>