AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Pending_Approval_To_Presented.validationRule-meta.xml
<ValidationRule>
    <fullName>Pending_Approval_To_Presented</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Presented&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Pending Approval&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t roll back to Presented from Pending Approval</errorMessage>
</ValidationRule>