AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Presented_To_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Presented_To_Accepted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Presented&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Accepted&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t roll back to Presented from Accepted</errorMessage>
</ValidationRule>