AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Presented_To_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Presented_To_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        ISPICKVAL(Status__c, &quot;Draft&quot;) &amp;&amp;
        BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Presented&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t roll back to draft from presented</errorMessage>
</ValidationRule>