AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Revie_Requested_To_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Revie_Requested_To_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Draft&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Review Requested&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t roll back to Draft from Review Requested</errorMessage>
</ValidationRule>