AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Validation_Accepted_To_Pending_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Accepted_To_Pending_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Accepted&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Pending Approval&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t roll back to Accepted from Pending Approval</errorMessage>
</ValidationRule>