AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Validation_Accepted_To_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Accepted_To_Rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Accepted&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Rejected&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t go trough to Accepted from Rejected</errorMessage>
</ValidationRule>