AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Validation_Draft_To_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Draft_To_Accepted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Accepted&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Draft&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t go trough to Draft from Accepted</errorMessage>
</ValidationRule>