AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Validation_Draft_To_Pending_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Draft_To_Pending_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Pending Approval&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Draft&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t go trough to Pending Approval from Draft</errorMessage>
</ValidationRule>