AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Validation_Draft_To_Presented.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Draft_To_Presented</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Draft&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Presented&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t go trough to Presented from Draft</errorMessage>
</ValidationRule>