AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Validation_Pending_Approval_To_Presented.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Pending_Approval_To_Presented</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Pending Approval&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Presented&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t roll back to Pending Approval from Presented</errorMessage>
</ValidationRule>