AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Validation_Presented_To_Review_Requested.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Presented_To_Review_Requested</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Presented&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Review Requested&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t go trough to Presented from  Review Requested</errorMessage>
</ValidationRule>