AssingmentSmartHR/force-app/main/default/objects/Offer__c/validationRules/Validation_Rejected_To_Pending_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rejected_To_Pending_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Rejected&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Pending Approval&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t go trough Pending Approval from Rejected</errorMessage>
</ValidationRule>